# RemoteID

./: .gitignore  CMakeLists.txt  README.md  advertizer.c  blue.cpp  dados.json  main  main.cpp  mainnan.c  opendroneid.h  remoteros.cpp  tasks.json  uav.json  wifi_sender  wifi_sender.cpp
RemoteID/: CMakeLists.txt
RemoteID/src/bluetooth/: advle.c  uav.cfg
RemoteID/src/include/: gpsmod.c  gpsmod.h
RemoteID/src/wifi/: wifi_sender.cpp
msg/: Remoteid.msg
python/: blue.py
ros2_ws/: .gitignore
ros2_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/install/remoteid_pubsub/lib/remoteid_pubsub/: listener  talker
ros2_ws/install/remoteid_pubsub/share/remoteid_pubsub/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_ws/log/: latest_build
ros2_ws/src/remoteid_pubsub/: package.xml  setup.cfg  setup.py
ros2_ws/src/remoteid_pubsub/remoteid_pubsub/: publisher_member_function.py  subscriber_member_function.py
ros2_ws/src/test_ros/: package.xml  setup.cfg  setup.py
ros2_ws/src/test_ros/test_ros/: publisher_member_function.py  subscriber_member_function.py
server/l2cap/: l2cap-c.cpp  l2cap-s.c
server/rfcomm/: rfcomm-client.cpp  rfcomm-server.c
src/: README.md  config.cfg  gpsmod.h  test copy.c  test.c
src/bluetooth/: adv.c  adv5.c  advLE.c  advertizer.c  advle.c  advle.h  beaconAdv.py  bluetooth.c  bluetooth.h  display.c  gpsmod.c  print_bt_features.h  remote.c  remote.cpp  remote.h  remoteros.c  remoteros.cpp  scan.c  scan.h  uav.cfg  utils.h
src/bluetooth/gpsd/: .gitignore
src/bluetooth/gpsd/gpsd-dev/: .scons-option-cache  .sconsign.5.dblite  Qgpsmm.pc  gpsd.rules  libQgpsmm.prl  libgps.pc  libgps.so.30.0.0  libgpsdpacket.so.30.0.0
src/bluetooth/gpsd/gpsd-dev/clients/: gpsd.php
src/bluetooth/gpsd/gpsd-dev/contrib/: skyview2svg.py
src/bluetooth/gpsd/gpsd-dev/drivers/: driver_greis_checksum.os  driver_rtcm2.os
src/bluetooth/gpsd/gpsd-dev/gps/: __init__.py  gps.py  packet.py
src/bluetooth/gpsd/gpsd-dev/gpsd/: crc24q.os  isgps.os  packet.os
src/bluetooth/gpsd/gpsd-dev/include/: gpsd_config.h  packet_names.h
src/bluetooth/gpsd/gpsd-dev/libgps/: ais_json.os  bits.os  gps_maskdump.c  gps_maskdump.os  gpsdclient.c  gpsdclient.os  gpspacket.os  gpsutils.os  hex.os  json.os  libgps_core.os  libgps_dbus.os  libgps_json.os  libgps_shm.os  libgps_sock.os  netlib.os  ntpshmread.os  os_compat.os  rtcm2_json.os  rtcm3_json.os  shared_json.os  timespec_str.os
src/include/: gpsmod.c  gpsmod.h  utils.h
src/include/cJSON/: json.c  json.h
src/wifi/: odid_wifi.h
(+15 files in other folders)
